lesson_18/moose-deploy.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  namespace: default
  labels:
    app: api-app
spec:
  selector:
    matchLabels:
      app: api-app
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  api-app
      labels:
        app: api-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values: ["animals"]
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: animals
        image: supergiantkir/animals:moose
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
          name: animals
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: animals
  namespace: default
spec:
  selector:
    app: animals
  type: LoadBalancer
  ports:
  - name: animals
    protocol: TCP
    port: 80
    targetPort: 80
---
